--- a/src/Stylesheets/timeLineView.css
+++ b/src/Stylesheets/timeLineView.css
@@ -7,9 +7,82 @@
 
     background-color: #E9E9E9;
     gap: 20px; /* Adjust the gap as needed */
-    overflow-y: scroll;
+
 }
 
-.full-screen-container .time-line-card {
-    margin-bottom: 20px; /* Add some space between the cards */
+.inner-container{
+    width: 80%; /* Adjust width as needed */
+    background-color: #fff; /* Optional: Set a background color for visibility */
+    padding: 20px; /* Padding inside the inner container */
+    border-radius: 10px; /* Optional: Add border-radius for rounded corners */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Optional: Add box shadow for a subtle effect */
+    
+}
+.card1{
+    margin: 5% 5% 5% -25%; /* top, right, bottom, left */
+    width: 100%; /* Make the card as wide as the screen */
+    display: flex;
+    justify-content: center; /* Align content to the left */
+}
+
+.card2{
+    margin: 5%;
+    width: 100%; /* Make the card as wide as the screen */
+    display: flex;
+    justify-content:center; /* Align content to the left */
+}
+
+.card3{
+    margin: 5% 10% 5% 30%;
+    width: 100%; /* Make the card as wide as the screen */
+    display: flex;
+    justify-content:center; /* Align content to the left */
+}
+
+.card4{
+    margin: 5% 10% 5% -15%;
+    width: 100%; /* Make the card as wide as the screen */
+    display: flex;
+    justify-content:center; /* Align content to the left */
+}
+
+
+.card5{
+    margin: 6% 5% 5% 10%;
+    width: 100%; /* Make the card as wide as the screen */
+    display: flex;
+    justify-content:center; /* Align content to the left */
+}
+
+.card6{
+    margin: 6% 5% 5% 35%;
+    width: 100%; /* Make the card as wide as the screen */
+    display: flex;
+    justify-content:center; /* Align content to the left */
+}
+
+.card7{
+    margin: 5% 5% 5% -10%;
+    width: 100%; /* Make the card as wide as the screen */
+    display: flex;
+    justify-content:center; /* Align content to the left */
+}
+
+.card8{
+    margin: 5% 7% 5% 15%;
+    width: 100%; /* Make the card as wide as the screen */
+    display: flex;
+    justify-content:center; /* Align content to the left */
+}
+
+
+
+.path1 {
+    position: absolute;
+    top: 20%;
+    left: 5%;
+    width: 100%;
+    height: 100%;
+    z-index: 0; /* Ensure it stays behind the cards */
+    transform: rotate(180deg); /* Rotate 90 degrees */
 }
