--- a/src/Stylesheets/timeLineView.css
+++ b/src/Stylesheets/timeLineView.css
@@ -21,7 +21,7 @@
     /* Padding inside the inner container */
     border-radius: 10px;
     /* Optional: Add border-radius for rounded corners */
-   
+
     background: url('../assets/dottedline.svg') no-repeat center 45%;
     background-size: auto;
     z-index: 2;
@@ -98,12 +98,12 @@
     text-transform: capitalize;
     opacity: 0.06;
     position: absolute;
-    
+
 }
 
 
 .text-background-div1 {
-    
+
     position: absolute;
     top: 0%;
     left: 5%;
@@ -111,7 +111,7 @@
 
 
 .text-background-div2 {
-    
+
     position: absolute;
     top: 16%;
     left: 20%;
@@ -120,7 +120,7 @@
 
 
 .text-background-div3 {
-    
+
     position: absolute;
     top: 50%;
     left: 0%;
@@ -128,8 +128,97 @@
 
 
 .text-background-div4 {
-    
+
     position: absolute;
     top: 70%;
     left: 15%;
+}
+
+.paraSec {
+    background-color: #E9E9E9;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* gap: 20px;
+    margin-top: 7%; */
+
+}
+
+.paraSec-sub {
+    width: 80%;
+    margin-top: 8%;
+}
+
+.header {
+    color: #292929;
+
+    text-align: center;
+    font-family: "Space Grotesk";
+    font-size: 93px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 81%;
+    /* 75.33px */
+    letter-spacing: 0.93px;
+    text-transform: capitalize;
+}
+
+.para {
+    color: #282828;
+
+    text-align: center;
+    font-family: "Space Grotesk";
+    font-size: 27px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 109%;
+    /* 29.43px */
+    letter-spacing: 0.27px;
+    text-transform: uppercase;
+}
+
+.buttonSection {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+    margin: 2%;
+}
+
+.button-filled, .button-outlined {
+    width: 60%; /* Fixed width for both buttons */
+    padding: 0.8em;
+    flex-shrink: 0;
+    border-radius: 1em;
+    border: 1px solid #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: transparent;
+    cursor: pointer;
+}
+
+.button-filled {
+    background: #292929;
+}
+
+.button-filled-text, .button-outlined-text {
+    text-align: center;
+    font-family: "Space Grotesk";
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 109%;
+    letter-spacing: 0.24px;
+    text-transform: uppercase;
+}
+
+.button-filled-text {
+    color: #E9E9E9;
+}
+
+.button-outlined-text {
+    color: #000;
 }
